# dtu_mlops

s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb  checkpoint.pth
s1_development_environment/exercise_files/final_exercise/: data.py  exploration.ipynb  main.py  model.pt  model.py
s2_organisation_and_version_control/exercise_files/: typing_exercise.py
s2_organisation_and_version_control/mlops_classifier/: Makefile  README.md  data.dvc  pyproject.toml
s2_organisation_and_version_control/mlops_classifier/.dvc/: config
s2_organisation_and_version_control/mlops_classifier/docs/: mkdocs.yaml
s2_organisation_and_version_control/mlops_classifier/docs/source/: index.md
s2_organisation_and_version_control/mlops_classifier/mlops_classifier/: __init__.py
s2_organisation_and_version_control/mlops_classifier/mlops_classifier/data/: make_dataset.py
s2_organisation_and_version_control/mlops_classifier/models/: model.pt
