[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_classifier"
version = "0.0.1"
description = "Test project for MLOps course"
authors = [
  { name = "William", email = "your@email.com" },
]

readme = "README.md"
requires-python = "~=3.10.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_classifier"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
